added project links and graphics

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div id="projects">
                     <article>
                         <h3>Banking Simulator</h3>
-                        <a href="">
-                            <img src="" alt="">
+                        <a href="https://github.com/emfaler/BankingApp">
+                            <img src="./images/BankingApp.jpg" alt="BankingApp">
                         </a>
                         <ul>
                             <li>Console Application that allows users to create and interact with their bank accounts.</li>
@@ -60,8 +60,8 @@
                     </article>
                     <article>
                         <h3>Donut Clicker</h3>
-                        <a href="">
-                            <img src="" alt="">
+                        <a href="https://github.com/emfaler/Donut-Clicker">
+                            <img src="./images/Donut Clicker.jpg" alt="Donut Clicker">
                         </a>
                         <ul>
                             <li>Inspired by the highly addictive Cookie Clicker game, this program engages the user to produce "donuts".</li>
@@ -70,8 +70,8 @@
                     </article>
                     <article>
                         <h3>Stone Chasers</h3>
-                        <a href="">
-                            <img src="" alt="">
+                        <a href="https://github.com/emfaler/Stone-Chasers">
+                            <img src="./images/Stone Chasers.jpg" alt="Stone Chasers">
                         </a>
                         <ul>
                             <li>Serving as our collaborative final project, this interactive program allows users to engage with the painted rock community on a specialized platform.  </li>
@@ -83,15 +83,13 @@
             <h2>Contact</h2>
             <section id="getInTouch">
 
-                <a href="">
-                    <img src="./images/Linkedin.png" alt="LinkedIn">
+                <a href="https://www.linkedin.com/in/efaler/">
+                    <img id="contactLink" src="./images/Linkedin.png" alt="LinkedIn">
                 </a>
-                <a href="">
-                    <img src="" alt="">
+                <a href="https://github.com/emfaler">
+                    <img id="contactLink" src="/images/Github.png" alt="Github">
                 </a>
-                <a href="">
-                    <img src="" alt="">
-                </a>
+             
             </section>
         </main>
 
