grammar errors fixed

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <p> With years of experience in a variety of sectors, including the Air Force, 
                     civilian aviation, and the service industry, I gained a passion for teamwork 
                     and problem solving. During the Spring of 2021 I completed the full stack web developer
-                     course at We Can Code It in Cleveland, Ohio. I felt that my background would lend itself 
+                     course at We Can Code It in Cleveland, Ohio. I felt that my diverse work history would lend itself 
                      well to web development and completing the course would give me skills I needed to thrive
-                      in today’s workforce. Throughout course I was challenged to develop foundational skills 
+                      in today’s workforce. Throughout the course I was challenged to develop foundational skills 
                       in a variety of languages as well as use remote technologies to collaborate on class 
                       projects. I now look forward to building on my education and bringing those skills 
                       into the workplace. 
                 </p>
-                <p>Please feel free to check out some of my coding projects below. If you would like to see more of my work or get in touch, I have provided my Github and Linkedin profiles.</p>
+                <p>Please feel free to check out some of my coding projects below. If you would like to see more of my work or get in touch, my Github and Linkedin profiles are provided.</p>
                 
                 <h3>Skills I am learning:</h3>
                 <p>C# • .NET Core • Active Server Pages / ASP.net • JavaScript • Flexbox • MVC • HTML • CSS • Grid • TDD
