--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
                     Source Control / GitHub</p>
                 </ul>
             </section>
+            <div>
+                <h2 id="projectHeader">My Projects</h2>
+            </div>
+            
             <section id="myProjects">
-                <h2>My Projects</h2>
-                
                 <div id="projects">
                     <article>
                         <h3>Banking Simulator</h3>
                         <a href="https://github.com/emfaler/BankingApp">
-                            <img src="./images/BankingApp.jpg" alt="BankingApp">
+                            <img src="./images/bankFront.jpeg" alt="BankingApp">
                         </a>
                         <ul>
                             <li>Console Application that allows users to create and interact with their bank accounts.</li>
@@ -69,9 +71,9 @@
                         </ul>
                     </article>
                     <article>
-                        <h3>Stone Chasers</h3>
-                        <a href="https://github.com/emfaler/Stone-Chasers">
-                            <img src="./images/Stone Chasers.jpg" alt="Stone Chasers">
+                        <h3>Blog Platform</h3>
+                        <a href="https://github.com/emfaler/Blog-Platform">
+                            <img src="./images/blog.jpg.crdownload" alt="Stone Chasers">
                         </a>
                         <ul>
                             <li>Serving as our collaborative final project, this interactive program allows users to engage with the painted rock community on a specialized platform.  </li>
@@ -80,7 +82,9 @@
                     </article>
                 </div>
             </section>
-            <h2>Contact</h2>
+            <div id="contactHeader">
+                <h2>Contact</h2>
+            </div>
             <section id="getInTouch">
 
                 <a href="https://www.linkedin.com/in/efaler/">
