changed project description

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                             <img src="./images/blog.jpg.crdownload" alt="Stone Chasers">
                         </a>
                         <ul>
-                            <li>Serving as our collaborative final project, this interactive program allows users to engage with the painted rock community on a specialized platform.  </li>
-                            <li>Skills used: C#, JavaScript, HTML, CSS, GitHub, GitBash</li>
+                            <li>Web application where users can create and customize blog posts.</li>
+                            <li>Skills used: C#, ASP .NET Core, HTML, CSS, MVC, TDD, GitHub, GitBash</li>
                         </ul>
                     </article>
                 </div>
