fixed blog image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <article>
                         <h3>Blog Platform</h3>
                         <a href="https://github.com/emfaler/Blog-Platform">
-                            <img src="./images/blog.jpg.crdownload" alt="Stone Chasers">
+                            <img src="./images/blog.jpg" alt="Blog Platform">
                         </a>
                         <ul>
                             <li>Web application where users can create and customize blog posts.</li>
